# asha-rpg

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.test.json
.github/workflows/: ci.yml
consumers/minimal-game/: Cargo.toml
consumers/minimal-game/src/: main.rs
crates/asha-rpg/: Cargo.toml
crates/asha-rpg/src/: lib.rs
crates/asha-rpg/tests/: public_facade.rs
crates/rpg-compiler/: Cargo.toml
crates/rpg-compiler/src/: artifact.rs  compile.rs  diagnostic.rs  execute.rs  lib.rs  registry.rs
crates/rpg-compiler/tests/: semantic_kernel.rs
crates/rpg-core/: Cargo.toml
crates/rpg-core/src/: authority.rs  lib.rs  primitives.rs
crates/rpg-ir/: Cargo.toml
crates/rpg-ir/src/: lib.rs  normalized.rs  play_bundle_artifact.rs  ruleset_artifact.rs
crates/rpg-runtime/: Cargo.toml  build.rs
crates/rpg-runtime/src/: encounter.rs  lib.rs  replay.rs  semantic_session.rs
docs/: design.md  encounter-session-contract.md  non-claims.md
examples/: generate-portable-replay-source.ts  representative-actions.ts
governance/: architecture.md  boundary-rules.md  change-amplification.json  dependency-policy.toml  ownership.toml  upstream-asha.toml
scripts/: check-authoring-boundary.mjs  check-authoring-boundary.test.mjs  check-governance.mjs  check-governance.test.mjs  generate-ir-vocabulary.mjs  report-change-amplification.mjs  report-change-amplification.test.mjs
