[workspace]
resolver = "2"
members = [
  "crates/rpg-core",
  "crates/rpg-ir",
  "crates/rpg-compiler",
  "crates/rpg-runtime",
  "crates/asha-rpg",
]
exclude = ["consumers/minimal-game"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
