[package]
name = "asha-rpg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supported public Rust facade for portable RPG authority."

[lints]
workspace = true

[dependencies]
rpg-core = { path = "../rpg-core" }
rpg-ir = { path = "../rpg-ir" }
rpg-runtime = { path = "../rpg-runtime" }
