[package]
name = "asha-rpg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supported public Rust facade for portable RPG authority."

[lints]
workspace = true

[dependencies]
rpg-compiler = { path = "../rpg-compiler" }
rpg-core = { path = "../rpg-core" }
rpg-ir = { path = "../rpg-ir" }
rpg-runtime = { path = "../rpg-runtime" }

[dev-dependencies]
serde_json.workspace = true
