[package]
name = "rpg-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Strict normalized RPG IR compiler and deterministic semantic kernel."

[lints]
workspace = true

[dependencies]
rpg-core = { path = "../rpg-core" }
rpg-ir = { path = "../rpg-ir" }
serde.workspace = true
serde_json.workspace = true
