[package]
name = "rpg-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent atomic authority session for compiled RPG artifacts."

[lints]
workspace = true

[dependencies]
rpg-compiler = { path = "../rpg-compiler" }
rpg-core = { path = "../rpg-core" }
